# AIxeleratorService

./: .gitignore  CMakeLists.txt  build.sh  slurm_build.sh  slurm_download_libtorch.sh
src/: CMakeLists.txt
src/aixeleratorService/: aixeleratorService.cpp
src/communicationStrategy/: collectiveCommunication.cpp
src/inferenceStrategy/torchInference/: torchInference.cpp
test/: CMakeLists.txt
